# TestFFmpeg

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dell/testffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/dell/testffmpeg/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/dell/testffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
